--- a/ViewWPF/Views/CadastroUsuario.xaml
+++ b/ViewWPF/Views/CadastroUsuario.xaml
@@ -22,7 +22,7 @@
         <Label x:Name="lblLogin" Content="Login:" Grid.Row="0" Grid.Column="0" 
                HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,14,2,10" Height="27" Width="45"/>
 
-        <Label x:Name="lblSenha" Content="Senha:" Grid.Row="1" Grid.Column="0" 
+        <Label x:Name="hHaslo" Content="Senha:" Grid.Row="1" Grid.Column="0" 
                HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,13,0,12" Height="26" Width="47"/>
 
         <Label x:Name="lblConfimSenha" Content="Confirmar Senha:" Grid.Row="2" Grid.Column="0" 
@@ -30,12 +30,12 @@
         <!--Labels-->
 
         <!--TextBoxs-->
-        <TextBox x:Name="txtLogin" Grid.Row="0" Grid.Column="1" 
+        <TextBox x:Name="tLogin" Grid.Row="0" Grid.Column="1" 
                  HorizontalAlignment="Stretch" VerticalAlignment="Center"
                  Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="0" Height="25">
         </TextBox>
 
-        <TextBox x:Name="txtSenha" Grid.Row="1" Grid.Column="1" 
+        <TextBox x:Name="tHaslo" Grid.Row="1" Grid.Column="1" 
                  HorizontalAlignment="Stretch" VerticalAlignment="Center"
                  Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="1" Height="27"/>
 
