--- a/ViewWPF/Views/MedicosCadastrados.xaml
+++ b/ViewWPF/Views/MedicosCadastrados.xaml
@@ -22,12 +22,12 @@
         <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" VerticalAlignment="Top" 
                   Height="169" Width="235" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding MeusMedicos}" >
             <DataGrid.Columns>
-                <DataGridTextColumn Width="115" Header="Nome" Binding="{Binding Nome}" />
-                <DataGridTextColumn Width="115" Header="Especialidade" Binding="{Binding Especialidade}"/>
+                <DataGridTextColumn Width="115" Header="Imie i nazwisko" Binding="{Binding ImieINazwisko}" />
+                <DataGridTextColumn Width="115" Header="Specjalizacja" Binding="{Binding Specjalizacja}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Label x:Name="lblMedicosCadastrados" Content="Medicos Cadastrados" Grid.Column="1" 
-               HorizontalAlignment="Left" Margin="55,14,0,0" VerticalAlignment="Top" Height="37" Width="127"/>
+        <Label x:Name="lListaLekarzy" Content="Lista lekarzy" Grid.Column="1" 
+               HorizontalAlignment="Center" Margin="55,14,0,0" VerticalAlignment="Top" Height="37" Width="127"   />
 
     </Grid>
 </Window>
