--- a/ViewWPF/Views/ListaPacjentow.xaml
+++ b/ViewWPF/Views/ListaPacjentow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ViewWPF.Views"
         mc:Ignorable="d"
-        Title="ListaPacjentow" Height="300" Width="300" WindowStartupLocation="CenterScreen">
+        Title="Przychodnia lekarska" Height="300" Width="300" WindowStartupLocation="CenterScreen">
     <Grid>
 
         <Grid.ColumnDefinitions>
@@ -26,8 +26,8 @@
                 <DataGridTextColumn Width="115" Header="Telefon" Binding="{Binding Telefon}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Label x:Name="lListaPacjentow" Content="Pacientes Cadastrados" Grid.Column="1" 
-               HorizontalAlignment="Left" Margin="52,14,0,0" VerticalAlignment="Top" Height="37" Width="128"/>
+        <Label x:Name="lListaPacjentow" Content="Lista Pacjentow" Grid.Column="1" 
+               HorizontalAlignment="Center" Margin="52,14,0,0" VerticalAlignment="Top" Height="37" Width="128"/>
 
     </Grid>
 </Window>
