--- a/ViewWPF/Views/rejstracjaPacjenta.xaml
+++ b/ViewWPF/Views/rejstracjaPacjenta.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ViewWPF.Views.CadastrarPaciente"
+﻿<Window x:Class="ViewWPF.Views.rejstracjaPacjenta"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ViewWPF.Views"
         mc:Ignorable="d"
-        Title="CadastrarPaciente" Height="234.545" Width="355.909" WindowStartupLocation="CenterScreen">
+        Title="REJSTRACJA PACJENTA" Height="234.545" Width="355.909" WindowStartupLocation="CenterScreen">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -20,47 +20,47 @@
         </Grid.ColumnDefinitions>
 
         <!--Labels-->
-        <Label x:Name="ImieiNazwisko" Content="Nome:" Grid.Row="0" Grid.Column="0" 
+        <Label x:Name="ImieiNazwisko" Content="Imie i nazwisko:" Grid.Row="0" Grid.Column="0" 
+               HorizontalAlignment="Right" VerticalAlignment="Center" Grid.ColumnSpan="2" Margin="0,12,256,13" Width="92"/>
+
+        <Label x:Name="lAdres" Content="Adres:" Grid.Row="1" Grid.Column="0" 
                HorizontalAlignment="Right" VerticalAlignment="Center"/>
 
-        <Label x:Name="lAdres" Content="CPF:" Grid.Row="1" Grid.Column="0" 
-               HorizontalAlignment="Right" VerticalAlignment="Center"/>
-
-        <Label x:Name="lblTelefone" Content="Telefone:" Grid.Row="2" Grid.Column="0" 
+        <Label x:Name="lblTelefone" Content="Telefon:" Grid.Row="2" Grid.Column="0" 
                HorizontalAlignment="Right" VerticalAlignment="Center"/>
         <!--Labels-->
         
         <!--TextBoxs-->
         <TextBox x:Name="txtNome" Grid.Row="0" Grid.Column="1" 
                  HorizontalAlignment="Stretch" VerticalAlignment="Center"
-                 Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="0">
+                 Margin="10,12,15,11" FontSize="12" Padding="5" TabIndex="0">
         </TextBox>
 
         <TextBox x:Name="txtCpf" Grid.Row="1" Grid.Column="1" 
                  HorizontalAlignment="Stretch" VerticalAlignment="Center"
-                 Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="1"/>
+                 Margin="10,11,15,12" FontSize="12" Padding="5" TabIndex="1"/>
 
         <TextBox x:Name="txtTelefone" Grid.Row="2" Grid.Column="1" 
                  HorizontalAlignment="Stretch" VerticalAlignment="Center"
-                 Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="1"/>
+                 Margin="10,12,15,11" FontSize="12" Padding="5" TabIndex="1"/>
         <!--TextBoxs-->
         
         <!--Buttons-->
-        <Button x:Name="przyciskDodaj" Content="Gravar" Grid.Row="3" 
+        <Button x:Name="przyciskDodaj" Content="Dodaj" Grid.Row="3" 
                 Grid.Column="1" HorizontalAlignment="Left" 
                 VerticalAlignment="Center" FontSize="12" Padding="5" 
                 TabIndex="2" Margin="0,7,0,10" Click="przyciskDodaj_Click"/>
 
-        <Button x:Name="przyciskEdytuj" Content="Buscar" Grid.Row="3" 
+        <Button x:Name="przyciskSzukaj" Content="Szukaj" Grid.Row="3" 
                 Grid.Column="1" HorizontalAlignment="Left" 
                 VerticalAlignment="Center" FontSize="12" Padding="5" 
-                Margin="100,10,0,13" TabIndex="3" Click="przyciskEdytuj_Click"/>
+                Margin="100,10,0,13" TabIndex="3" Click="przyciskSzukaj_Click"/>
         
-        <Button x:Name="przyciskUsun" Content="Alterar" Grid.Row="3" 
+        <Button x:Name="przyciskZmien" Content="Zmien" Grid.Row="3" 
                 Grid.Column="1" HorizontalAlignment="Left" 
                 VerticalAlignment="Center" FontSize="12" Padding="5" 
                 Margin="198,10,0,13" TabIndex="3"
-                IsEnabled="False" Click="przyciskUsun_Click" />
+                IsEnabled="False" Click="przyciskZmien_Click" />
         <!--Buttons-->
 
     </Grid>
