--- a/ViewWPF/Views/ListaPacjentow.xaml
+++ b/ViewWPF/Views/ListaPacjentow.xaml
@@ -20,7 +20,7 @@
         </Grid.RowDefinitions>
 
         <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" VerticalAlignment="Top" 
-                  Height="169" Width="235" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding MeusPacientes}" >
+                  Height="169" Width="235" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding MoiPacjenci}" >
             <DataGrid.Columns>
                 <DataGridTextColumn Width="115" Header="Imie i nazwisko" Binding="{Binding ImieINazwisko}" />
                 <DataGridTextColumn Width="115" Header="Telefon" Binding="{Binding Telefon}"/>
