--- a/ViewWPF/Views/rejstracjaWizyty.xaml
+++ b/ViewWPF/Views/rejstracjaWizyty.xaml
@@ -8,10 +8,10 @@
         Title="Dodaj wizyte" Height="250" Width="355.909" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="59*"/>
+            <RowDefinition Height="59*"/>
+            <RowDefinition Height="56*"/>
+            <RowDefinition Height="61*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="30*"/>
@@ -20,46 +20,49 @@
 
         <!--Labels-->
         <Label x:Name="lData" Content=" Data:" Grid.Row="0" Grid.Column="0" 
-               HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,14,2,10" Height="27" Width="45"/>
+               HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,18,2,0" Height="27" Width="45"/>
 
         <Label x:Name="lGodzina" Content="Godzina:" Grid.Row="1" Grid.Column="0" 
-               HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,15,0,14" Height="26" Width="59"/>
+               HorizontalAlignment="Left" VerticalAlignment="Center" Margin="43,0,0,0" Height="26" Width="59" Grid.ColumnSpan="2"/>
 
         <Label x:Name="lTypWizyty" Content="        Typ Wizyty:" Grid.Row="2" Grid.Column="0" 
-               HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,15,0,14" Height="26" Width="99"/>
+               HorizontalAlignment="Left" VerticalAlignment="Center" Margin="3,0,0,0" Height="26" Width="99" Grid.ColumnSpan="2"/>
 
         <!--Labels-->
 
         <!--TextBoxs-->
-        <TextBox x:Name="tData" Grid.Row="0" Grid.Column="1" 
-                 HorizontalAlignment="Stretch" VerticalAlignment="Center"
+
+        <TextBox x:Name="tData" Grid.Column="1" VerticalAlignment="Center"
                  Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="1" Height="27"/>
 
-        <TextBox x:Name="tGodzina" Grid.Row="1" Grid.Column="1" 
-                 HorizontalAlignment="Stretch" VerticalAlignment="Center"
+        <TextBox x:Name="tGodzina" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center"
                  Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="1" Height="27"/>
 
-        <TextBox x:Name="tTypWizyty" Grid.Row="2" Grid.Column="1" 
-                 HorizontalAlignment="Stretch" VerticalAlignment="Center"
+        <TextBox x:Name="tTypWizyty" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center"
                  Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="0" Height="28"/>
+
+        <TextBox x:Name="tID" Grid.Column="1" VerticalAlignment="Top"
+                 Margin="0,54,208,0" FontSize="12" Padding="5" TabIndex="1" Height="27" Grid.Row="2" Grid.RowSpan="2"/>
         <!--TextBoxs-->
 
         <!--Buttons-->
         <Button x:Name="przyciskDodaj" Content="Dodaj" Grid.Row="3" 
                 Grid.Column="1" HorizontalAlignment="Left" 
-                VerticalAlignment="Center" FontSize="12" Padding="5" 
-                TabIndex="2" Margin="0,3,0,14" Height="30" Width="55" Click="przyciskDodaj_Click"/>
+                VerticalAlignment="Top" FontSize="12" Padding="5" 
+                TabIndex="2" Margin="0,31,0,0" Height="30" Width="55" Click="przyciskDodaj_Click"/>
 
         <Button x:Name="przyciskEdytuj" Content="Edytuj" Grid.Row="3" 
                 Grid.Column="1" HorizontalAlignment="Left" IsEnabled="False"
-                VerticalAlignment="Center" FontSize="12" Padding="5" 
-                Margin="94,3,0,14" TabIndex="3" Height="30" Width="55" Click="przyciskEdytuj_Click"/>
+                VerticalAlignment="Top" FontSize="12" Padding="5" 
+                Margin="92,31,0,0" TabIndex="3" Height="30" Width="55" Click="przyciskEdytuj_Click"/>
 
         <Button x:Name="przyciskUsun" Content="Usun" Grid.Row="3" 
                 Grid.Column="1" HorizontalAlignment="Left" 
-                VerticalAlignment="Center" FontSize="12" Padding="5" 
-                Margin="181,3,0,14" TabIndex="3"
+                VerticalAlignment="Top" FontSize="12" Padding="5" 
+                Margin="177,31,0,0" TabIndex="3"
                 IsEnabled="False" Height="30" Width="55" Click="przyciskUsun_Click"/>
+        <Label x:Name="lData_Copy" Content="ID Wizyty:" Grid.Row="2" Grid.Column="0" 
+            HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,55,10,0" Height="27" Width="69" Grid.RowSpan="2"/>
         <!--Buttons-->
 
     </Grid>
