--- a/ViewWPF/Views/rejstracjaWizyty.xaml
+++ b/ViewWPF/Views/rejstracjaWizyty.xaml
@@ -6,6 +6,33 @@
         xmlns:local="clr-namespace:ViewWPF.Views"
         mc:Ignorable="d"
         Title="Dodaj wizyte" Height="250" Width="355.909" WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <Style x:Key="MyWaterMarkStyle" TargetType="{x:Type TextBox}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type TextBox}">
+                        <Grid>
+                            <Border Background="White" BorderBrush="#FF7D8683" BorderThickness="1"/>
+                            <ScrollViewer x:Name="PART_ContentHost" Margin="5,0,0,0" VerticalAlignment="Center" />
+                            <Label Margin="5,0,0,0" x:Name="WaterMarkLabel" Content="{TemplateBinding Tag}" VerticalAlignment="Center"
+                               Visibility="Collapsed" Foreground="Gray" FontFamily="Arial"/>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <MultiTrigger>
+                                <MultiTrigger.Conditions>
+                                    <Condition Property="Text" Value=""/>
+                                </MultiTrigger.Conditions>
+                                <Setter Property="Visibility" TargetName="WaterMarkLabel" Value="Visible"/>
+                            </MultiTrigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="Foreground" Value="DimGray"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="59*"/>
@@ -32,14 +59,18 @@
 
         <!--TextBoxs-->
 
-        <TextBox x:Name="tData" Grid.Column="1" VerticalAlignment="Center"
-                 Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="1" Height="27"/>
 
+        
         <TextBox x:Name="tGodzina" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center"
-                 Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="1" Height="27"/>
+                 Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="1" Height="27" 
+              Style="{StaticResource MyWaterMarkStyle}" Tag="00:00"
+                 />
+        
 
         <TextBox x:Name="tTypWizyty" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center"
-                 Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="0" Height="28"/>
+                 Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="0" Height="28"
+                 Style="{StaticResource MyWaterMarkStyle}" Tag="Kontrolna / Zabieg"
+                 />
 
         <TextBox x:Name="tID" Grid.Column="1" VerticalAlignment="Top"
                  Margin="0,54,208,0" FontSize="12" Padding="5" TabIndex="1" Height="27" Grid.Row="2" Grid.RowSpan="2"/>
@@ -63,7 +94,9 @@
                 IsEnabled="False" Height="30" Width="55" Click="przyciskUsun_Click"/>
         <Label x:Name="lData_Copy" Content="ID Wizyty:" Grid.Row="2" Grid.Column="0" 
             HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,55,10,0" Height="27" Width="69" Grid.RowSpan="2"/>
+        <DatePicker x:Name="tData" HorizontalAlignment="Left" Margin="100,20,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
         <!--Buttons-->
 
     </Grid>
+
 </Window>
