--- a/ViewWPF/Views/ListaLekarzy.xaml
+++ b/ViewWPF/Views/ListaLekarzy.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ViewWPF.Views"
         mc:Ignorable="d"
-        Title="Przychodnia Medyczna" Height="300" Width="300" WindowStartupLocation="CenterScreen">
+        Title="Przychodnia Medyczna" Height="326" Width="406" WindowStartupLocation="CenterScreen">
     <Grid>
 
         <Grid.ColumnDefinitions>
@@ -20,7 +20,7 @@
         </Grid.RowDefinitions>
 
         <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" VerticalAlignment="Top" 
-                  Height="169" Width="235" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding MoiLekarze}" >
+                  Height="169" Width="385" AutoGenerateColumns="False" Grid.Row="1" ItemsSource="{Binding MoiLekarze}" Grid.ColumnSpan="3" Margin="10,0,0,0" >
             <DataGrid.Columns>
                 <DataGridTextColumn Width="115" Header="Imie i nazwisko" Binding="{Binding ImieINazwisko}" />
                 <DataGridTextColumn Width="115" Header="Adres" Binding="{Binding Adres}" />
@@ -29,6 +29,7 @@
         </DataGrid>
         <Label x:Name="lListaLekarzy" Content="Lista lekarzy" Grid.Column="1" 
                HorizontalAlignment="Center" Margin="55,14,0,0" VerticalAlignment="Top" Height="37" Width="127"   />
-
+        <Button x:Name="usunWizyte" Content="Usun Lekarza" HorizontalAlignment="Left" Margin="113,174,0,0" VerticalAlignment="Top" Click="usunWizyte_Click" Width="93" Height="27" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2"/>
+        <Button x:Name="listaWszystkichLekarzy" Content="WSZYSCY LEKARZE" Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="29" Margin="254,0,0,0" VerticalAlignment="Top" Width="110" Grid.Column="1" Click="listaWszystkichLekarzy_Click"/>
     </Grid>
 </Window>
