--- a/ViewWPF/Views/ListaPacjentow.xaml
+++ b/ViewWPF/Views/ListaPacjentow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ViewWPF.Views"
         mc:Ignorable="d"
-        Title="Przychodnia lekarska" Height="300" Width="300" WindowStartupLocation="CenterScreen">
+        Title="Przychodnia lekarska" Height="314" Width="384" WindowStartupLocation="CenterScreen">
     <Grid HorizontalAlignment="Right" Width="292">
 
         <Grid.ColumnDefinitions>
@@ -19,16 +19,15 @@
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
 
-        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" VerticalAlignment="Top" 
-                  Height="169" Width="235" AutoGenerateColumns="False" Grid.Column="1" Grid.Row="1" ItemsSource="{Binding MoiPacjenci}" >
+        <DataGrid x:Name="dataGrid" VerticalAlignment="Top" 
+                  Height="169" AutoGenerateColumns="False" Grid.Row="1" ItemsSource="{Binding MoiPacjenci}" Grid.ColumnSpan="3" Margin="-82,0,10,0" >
             <DataGrid.Columns>
                 <DataGridTextColumn Width="115" Header="Imie i nazwisko" Binding="{Binding ImieINazwisko}" />
                 <DataGridTextColumn Width="115" Header="Adres" Binding="{Binding Adres}"/>
                 <DataGridTextColumn Width="115" Header="Telefon" Binding="{Binding Telefon}"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Label x:Name="lListaPacjentow" Content="Lista Pacjentow" Grid.Column="1" 
-               HorizontalAlignment="Center" Margin="52,14,0,0" VerticalAlignment="Top" Height="37" Width="128"/>
-
+        <Label x:Name="lListaPacjentow" Content="Lista Pacjentow" Margin="-91,0,0,0" VerticalAlignment="Center" Height="37" Grid.ColumnSpan="3" HorizontalAlignment="Center"/>
+        <Button x:Name="usunPacjenta" Content="Usun Pacjenta" HorizontalAlignment="Left" Margin="23,171,0,0" VerticalAlignment="Top" Click="usunPacjenta_Click" Width="93" Height="27" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2"/>
     </Grid>
 </Window>
