--- a/ViewWPF/Views/ListaWizyt.xaml
+++ b/ViewWPF/Views/ListaWizyt.xaml
@@ -8,16 +8,20 @@
         Title="Lista Wizyt" Height="400" Width="700">
     <Grid>
         <DataGrid x:Name="dataGrid" VerticalAlignment="Top" 
-                  Height="232" AutoGenerateColumns="False" ItemsSource="{Binding MoiWizyty}" Margin="37,105,37,0" >
-        <DataGrid.Columns>
+                  Height="232" AutoGenerateColumns="False" ItemsSource="{Binding MoiWizyty}" Margin="37,105,37,0">
+            <DataGrid.Columns>
                 <DataGridTextColumn Width="115" Header="ID" Binding="{Binding Id}" />
                 <DataGridTextColumn Width="115" Header="Data Wizyty" Binding="{Binding Data}" />
-            <DataGridTextColumn Width="115" Header="Godzina" Binding="{Binding Godzina}"/>
-            <DataGridTextColumn Width="115" Header="Typ wizyty" Binding="{Binding TypWizyty}"/>
-        </DataGrid.Columns>
+                <DataGridTextColumn Width="115" Header="Godzina" Binding="{Binding Godzina}"/>
+                <DataGridTextColumn Width="115" Header="Typ wizyty" Binding="{Binding TypWizyty}"/>
+
+            </DataGrid.Columns>
+
         </DataGrid>
+
         <Label Content="Lista wizyt&#xD;&#xA;" Margin="0,14,0,0" VerticalAlignment="Top" Height="52" FontSize="25" HorizontalAlignment="Center"/>
-        <Button x:Name="UsunWizyte" Content="USUN" HorizontalAlignment="Left" Height="32" Margin="133,342,0,0" VerticalAlignment="Top" Width="118" Click="UsunWizyte_Click"/>
+        <Button x:Name="usunWizyte" Content="Usun wizyte" HorizontalAlignment="Center" Margin="0,66,0,0" VerticalAlignment="Top" Click="usunWizyte_Click" Width="122" Height="21"/>
+
 
     </Grid>
 </Window>
