--- a/ViewWPF/Views/WszyscyLekarze.xaml
+++ b/ViewWPF/Views/WszyscyLekarze.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ViewWPF.Views.ListaLekarzy"
+﻿<Window x:Class="ViewWPF.Views.WszyscyLekarze"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -29,7 +29,7 @@
         </DataGrid>
         <Label x:Name="lListaLekarzy" Content="Lista lekarzy" Grid.Column="1" 
                HorizontalAlignment="Center" Margin="55,14,0,0" VerticalAlignment="Top" Height="37" Width="127"   />
-        <Button x:Name="usunWizyte" Content="Usun Lekarza" HorizontalAlignment="Left" Margin="113,174,0,0" VerticalAlignment="Top" Click="usunWizyte_Click" Width="93" Height="27" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2"/>
-        <Button x:Name="listaWszystkichLekarzy" Content="WSZYSCY LEKARZE" Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="29" Margin="228,0,0,0" VerticalAlignment="Top" Width="136" Grid.Column="1" Click="listaWszystkichLekarzy_Click"/>
+        
+        
     </Grid>
 </Window>
