--- a/ViewWPF/Views/WszyscyPacjenci.xaml
+++ b/ViewWPF/Views/WszyscyPacjenci.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ViewWPF.Views.ListaPacjentow"
+﻿<Window x:Class="ViewWPF.Views.WszyscyPacjenci"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -28,7 +28,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <Label x:Name="lListaPacjentow" Content="Lista Pacjentow" Margin="-91,0,0,0" VerticalAlignment="Center" Height="37" Grid.ColumnSpan="3" HorizontalAlignment="Center"/>
-        <Button x:Name="usunPacjenta" Content="Usun Pacjenta" HorizontalAlignment="Left" Margin="23,171,0,0" VerticalAlignment="Top" Click="usunPacjenta_Click" Width="93" Height="27" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2"/>
-        <Button x:Name="listaWszystkichPacjentow" Content="WSZYSCY PACJENCI" Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="29" Margin="126,0,0,0" VerticalAlignment="Top" Width="136" Grid.Column="1" Click="listaWszystkichPacjentow_Click"/>
+        
+       
     </Grid>
 </Window>
