--- a/ViewWPF/Views/ListaWizyt.xaml
+++ b/ViewWPF/Views/ListaWizyt.xaml
@@ -14,6 +14,7 @@
                 <DataGridTextColumn Width="115" Header="Data Wizyty" Binding="{Binding Data}" />
                 <DataGridTextColumn Width="115" Header="Godzina" Binding="{Binding Godzina}"/>
                 <DataGridTextColumn Width="115" Header="Typ wizyty" Binding="{Binding TypWizyty}"/>
+                <DataGridTextColumn Width="140" Header="Imie i nazwisko pacjenta" Binding="{Binding ImieINazwiskoPacjenta}"/>
 
             </DataGrid.Columns>
 
