--- a/ViewWPF/Views/rejstracjaWizyty.xaml
+++ b/ViewWPF/Views/rejstracjaWizyty.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ViewWPF.Views"
         mc:Ignorable="d"
-        Title="Dodaj wizyte" Height="250" Width="355.909" WindowStartupLocation="CenterScreen">
+        Title="Dodaj wizyte" Height="327" Width="467" WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <Style x:Key="MyWaterMarkStyle" TargetType="{x:Type TextBox}">
             <Setter Property="Template">
@@ -35,10 +35,10 @@
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="59*"/>
-            <RowDefinition Height="59*"/>
             <RowDefinition Height="56*"/>
-            <RowDefinition Height="61*"/>
+            <RowDefinition Height="56*"/>
+            <RowDefinition Height="49*"/>
+            <RowDefinition Height="150*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="30*"/>
@@ -46,14 +46,14 @@
         </Grid.ColumnDefinitions>
 
         <!--Labels-->
-        <Label x:Name="lData" Content=" Data:" Grid.Row="0" Grid.Column="0" 
-               HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,18,2,0" Height="27" Width="45"/>
+        <Label x:Name="lData" Content=" Data:" Grid.Column="0" 
+               HorizontalAlignment="Left" VerticalAlignment="Center" Margin="86,0,0,0" Height="27" Width="45"/>
 
         <Label x:Name="lGodzina" Content="Godzina:" Grid.Row="1" Grid.Column="0" 
-               HorizontalAlignment="Left" VerticalAlignment="Center" Margin="43,0,0,0" Height="26" Width="59" Grid.ColumnSpan="2"/>
+               HorizontalAlignment="Left" VerticalAlignment="Center" Margin="43,0,0,0" Height="26" Width="59"/>
 
         <Label x:Name="lTypWizyty" Content="        Typ Wizyty:" Grid.Row="2" Grid.Column="0" 
-               HorizontalAlignment="Left" VerticalAlignment="Center" Margin="3,0,0,0" Height="26" Width="99" Grid.ColumnSpan="2"/>
+               HorizontalAlignment="Left" VerticalAlignment="Center" Margin="3,0,0,0" Height="26" Width="99"/>
 
         <!--Labels-->
 
@@ -61,35 +61,40 @@
 
 
 
-        <TextBox x:Name="tGodzina" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center"
-                 Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="1" Height="27" 
-              Style="{StaticResource MyWaterMarkStyle}" Tag="00:00"
+        <TextBox x:Name="tGodzina" Grid.Row="1" VerticalAlignment="Center"
+                 Margin="133,0,15,0" FontSize="12" Padding="5" TabIndex="1" Height="27" 
+              Style="{StaticResource MyWaterMarkStyle}" Tag="00:00" Grid.ColumnSpan="2"
                  />
 
 
-        <TextBox x:Name="tTypWizyty" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center"
-                 Margin="0,0,15,0" FontSize="12" Padding="5" TabIndex="0" Height="28"
-                 Style="{StaticResource MyWaterMarkStyle}" Tag="Kontrolna / Zabieg"
+        <TextBox x:Name="tTypWizyty" Grid.Row="2" VerticalAlignment="Center"
+                 Margin="133,0,15,0" FontSize="12" Padding="5" TabIndex="0" Height="28"
+                 Style="{StaticResource MyWaterMarkStyle}" Tag="Kontrolna / Zabieg" Grid.ColumnSpan="2"
                  />
         <!--TextBoxs-->
 
         <!--Buttons-->
-        <Button x:Name="przyciskDodaj" Content="Dodaj" Grid.Row="3" 
-                Grid.Column="1" HorizontalAlignment="Left" 
+        <Button x:Name="przyciskDodaj" Content="Dodaj" Grid.Row="3" HorizontalAlignment="Left" 
                 VerticalAlignment="Top" FontSize="12" Padding="5" 
-                TabIndex="2" Margin="0,21,0,0" Height="30" Width="55" Click="przyciskDodaj_Click"/>
+                TabIndex="2" Margin="133,91,0,0" Height="30" Width="55" Click="przyciskDodaj_Click" Grid.ColumnSpan="2"/>
 
         <Button x:Name="przyciskEdytuj" Content="Edytuj" Grid.Row="3" 
                 Grid.Column="1" HorizontalAlignment="Left" IsEnabled="False"
                 VerticalAlignment="Top" FontSize="12" Padding="5" 
-                Margin="81,21,0,0" TabIndex="3" Height="30" Width="55" Click="przyciskEdytuj_Click"/>
+                Margin="73,91,0,0" TabIndex="3" Height="30" Width="55" Click="przyciskEdytuj_Click" RenderTransformOrigin="0.356,3.034"/>
 
         <Button x:Name="przyciskUsun" Content="Usun" Grid.Row="3" 
                 Grid.Column="1" HorizontalAlignment="Left" 
                 VerticalAlignment="Top" FontSize="12" Padding="5" 
-                Margin="161,21,0,0" TabIndex="3"
+                Margin="159,91,0,0" TabIndex="3"
                 IsEnabled="False" Height="30" Width="55" Click="przyciskUsun_Click"/>
-        <DatePicker x:Name="tData" HorizontalAlignment="Left" Margin="100,20,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
+        <DatePicker x:Name="tData" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" RenderTransformOrigin="1.09,0.835" Grid.Column="1" Height="24" Width="104"/>
+        <Label x:Name="lImieINaziwskoPacjenta" Content="Imie i nazwisko pacjenta:" Grid.Row="3" Grid.Column="0" 
+            HorizontalAlignment="Left" VerticalAlignment="Top" Margin="24,10,0,0" Height="26" Width="99"/>
+        <TextBox x:Name="tImieINazwiskoPacjenta" Grid.Row="3" VerticalAlignment="Top"
+            Margin="133,10,15,0" FontSize="12" Padding="5" TabIndex="1" Height="27" 
+            Tag="00:00" Grid.ColumnSpan="2"
+                 />
         <!--Buttons-->
 
     </Grid>
